fix z-index download section

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -644,6 +644,7 @@
         height: 46.5rem;
         background: url('../img/shape-letter-O-gray.svg') center/contain no-repeat;
         // opacity: 0.1;
+        z-index: 10;
     }
 
     // Container
@@ -654,7 +655,9 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-
+        z-index: 20;
+        position: relative;
+        
         @include addMediaQuery(laptop) {
             flex-direction: column;
             text-align: center;
